<resources>
    <string name="app_name">Parking</string>
    <string name="terms_agreement">I have read and agree to the terms of use of the system</string>
    <string name="terms_agreement_link">of use of the system</string>
    <string name="sign_up">SIGN UP</string>
    <string name="next">Next</string>
    <string name="enter_personal_information">enter personal information</string>
    <string name="personal_number">Personal number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="create_account">create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="invalid_input">Invalid input</string>
    <string name="terms_and_agreements_url">https://static.municipal.gov.ge/terms-and-agreements/en.html</string>
    <string name="map">Map</string>
    <string name="licenses">Licenses</string>
    <string name="parking">Parking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permissions_denied">Permissions denied - unable to use current location</string>
    <string name="location_services_disabled">Location Services Disabled</string>
    <string name="asking_for_location">Please enable location services to use this feature</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="authorization">AUTHORIZATION</string>
    <string name="log_in">Log In</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name</string>
    <string name="user_panel">User Panel</string>
    <string name="add_balance">Add Balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="card_details">card details</string>
    <string name="cvv">CVV</string>
    <string name="date">Date</string>
    <string name="date_hint">MM/YY</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="cvv_hint">- - -</string>
    <string name="add_card">Add Card</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="card_number">Card number</string>
    <string name="pay_now">pay now</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="name_of_the_vehicle">Name Of The Vehicle</string>
    <string name="add">Add</string>
    <string name="e_g_aa111aa">E.g. AA111AA</string>
    <string name="start_parking">Start Parking</string>
    <string name="plate_number">Plate Number</string>
    <string name="zone">Zone</string>
    <string name="lot_number">Lot Number</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_23_59_59">23:59:59</string>
    <string name="hyphen">-</string>
    <string name="hour">Hour:</string>
    <string name="start_parking_dialog">Do You Want To Start Parking?</string>
    <string name="start">Start</string>
    <string name="gel">GEL</string>
    <string name="buy_license">buy license</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="save">Save</string>
    <string name="save_session">Save Session</string>
    <string name="wallet">wallet</string>
    <string name="save_card">Save Card</string>
    <string name="mastercard_visa">MasterCard / Visa</string>
    <string name="balance">Balance:</string>
    <string name="choose_saved_card">choose saved card</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="zonal_license">Zonal card</string>
    <string name="parking_license">Parking card</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="one_num">1</string>
    <string name="one_text">one</string>
    <string name="pay_from_your_balance">Pay from Your Balance</string>
    <string name="pay_with_plastic_card">Pay with Plastic Card</string>
    <string name="choose_a_payment_method">Choose a Payment Method</string>
    <string name="password_error">Password must be at least 8 characters long</string>
    <string name="matching_password_error">Passwords do not match</string>
    <string name="zonal_card">Zonal card</string>
    <string name="active_parking">Active Parking</string>
    <string name="_19_march_tuesday_01_30">19 march, Tuesday, 01:30</string>
    <string name="finish_parking">Finish Parking</string>
    <string name="active_licenses">active licenses</string>
    <string name="plate_number_">plate number:</string>
    <string name="name">name:</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="transactions">Transactions</string>
    <string name="password_requirement">Must have 7+ characters, 1 uppercase, 1 digit</string>
    <string name="deposit_from_card">DEPOSIT FROM CARD</string>
    <string name="end_parking">END PARKING</string>
    <string name="buy_license_by_card">BUY LICENSE BY CARD</string>
    <string name="buy_license_from_balance">BUY LICENSE FROM BALANCE</string>
    <string name="password_weak">weak</string>
    <string name="password_medium">medium</string>
    <string name="password_strong">strong</string>
    <string name="parking_started">Parking Started:</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="car_name">car name:</string>
    <string name="parking_station">parking station:</string>
    <string name="address">address:</string>
    <string name="card_number_">card number:</string>
    <string name="license_type">license type:</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_plate_number">Vehicle Plate Number</string>
    <string name="choose_license_to_buy">Choose License To Buy</string>
</resources>