<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/parkingFragment"
        android:icon="@drawable/ic_parking"
        android:title="@string/parking" />

<!--    <item-->
<!--        android:id="@+id/mapFragment"-->
<!--        android:icon="@drawable/ic_map"-->
<!--        android:title="@string/map" />-->

    <item
        android:id="@+id/licensesFragment"
        android:icon="@drawable/ic_credit_card"
        android:title="@string/licenses" />

    <item
        android:id="@+id/finesFragment"
        android:icon="@drawable/ic_fines"
        android:title="@string/fines" />

    <item
        android:icon="@drawable/ic_hamburger_menu"
        android:id="@+id/userPanelBottomSheet"
        android:title="@string/user_panel" />

</menu>