<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/from"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/to"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/tvEndDate"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/_00_00_00"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrom" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHyphen"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/hyphen"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tvStartDate"
        app:layout_constraintStart_toEndOf="@+id/tvStartDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/_23_59_59"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toEndOf="@+id/tvHyphen"
        app:layout_constraintTop_toTopOf="@+id/tvStartDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/hour"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/tvCost"
        app:layout_constraintTop_toTopOf="@+id/tvStartDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_regular"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvCurrency"
        app:layout_constraintTop_toTopOf="@+id/tvStartDate"
        tool:text="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/gel"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvStartDate" />

    <View
        android:id="@+id/vDevider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartParking"
        style="@style/customButtonMaterial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/start_parking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vDevider" />

</androidx.constraintlayout.widget.ConstraintLayout>