<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.parking.start_parking.parking_is_started.ParkingIsStartedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/customLayoutPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/customPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_parking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBalanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/balance"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toStartOf="@id/tvBalance"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toStartOf="@+id/tvCurrency"
            app:layout_constraintTop_toTopOf="@+id/tvBalanceText"
            tools:text="125.35" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gel"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvBalanceText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPlateNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/plate_number"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBalance" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPlateNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/open_sans_regular"
            android:textSize="@dimen/text_size_mega_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvPlateNumberText"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnZone"
            style="@style/customOutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="8dp"
            android:text="@string/zone"
            android:textColor="@color/dark_blue"
            app:icon="@drawable/ic_letter_a"
            app:iconTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPlateNumberText"
            app:strokeColor="@color/dark_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActiveParking"
            style="@style/customPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/active_parking"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnZone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActiveParkingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_plus"
            android:text="@string/_19_march_tuesday_01_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvActiveParking" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFinishParking"
            style="@style/customButtonMaterial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/finish_parking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@id/tvActiveParkingDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>