<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_background"
    android:elevation="10dp"
    android:padding="@dimen/padding_standard">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCardDetails"
        style="@style/customFieldsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_details"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif-light"
        android:text="@string/card_number"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintStart_toStartOf="@+id/etCardNumber"
        app:layout_constraintTop_toTopOf="@+id/etCardNumber" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingTop="@dimen/padding_large"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCardDetails">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardNumberInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/card_number_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="19" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif-light"
        android:text="@string/date"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintStart_toStartOf="@+id/etCardDate"
        app:layout_constraintTop_toTopOf="@+id/etCardDate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCardDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:paddingTop="@dimen/padding_large"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/etCVV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardDateInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif-light"
        android:text="@string/cvv"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintStart_toStartOf="@+id/etCVV"
        app:layout_constraintTop_toTopOf="@+id/etCVV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCVV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:paddingTop="@dimen/padding_large"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCardDate"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCVVInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cvv_hint"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRememberCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/remember_card"
        app:layout_constraintEnd_toStartOf="@+id/chkRememberCard"
        app:layout_constraintTop_toBottomOf="@+id/etCVV" />

    <CheckBox
        android:id="@+id/chkRememberCard"
        style="@style/checkBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvRememberCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRememberCard"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProceedToPayment"
        style="@style/customButtonMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_plus"
        android:text="@string/proceed_to_payment"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRememberCard" />

</androidx.constraintlayout.widget.ConstraintLayout>