<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/customLayoutPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.screen.sign_up.personal_information.PersonalInformationFragment">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            style="@style/customButtonArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/customPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="@id/btnBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/customFieldsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_personal_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPersonalNumber"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPersonalNumberInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personal_number"
                android:inputType="number"
                android:maxLength="11" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFirstName"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPersonalNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLastName"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMobileNumber"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLastName"
            app:prefixText="+995">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobileNumberInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="9" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/customButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>